# -6.-Django-Basics

./: README.md  category.html  contacts.html  home.html  orders.html  pyproject.toml  web.py
